syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.core.impl.testservices";
option java_outer_classname = "CodegenProto";

import "dev/restate/ext.proto";
import "google/protobuf/empty.proto";

package codegen;

service Codegen {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc EmptyInput (google.protobuf.Empty) returns (MyMessage);
  rpc EmptyOutput (MyMessage) returns (google.protobuf.Empty);
  rpc EmptyInputOutput (google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc OneWay (MyMessage) returns (MyMessage);
  rpc Delayed (MyMessage) returns (MyMessage);
}

message MyMessage {
  string value = 1;
}
